# GVS

./: CMakeLists.txt  README.md  test.ipynb
GVS-CPU/: CMakeLists.txt  GVS-CPU.sln
GVS-CPU/GVS-CPU/: GVS-CPU.cpp  GVS-CPU.vcxproj  GVS-CPU.vcxproj.filters
Lab1_CUDA/: Lab1_CUDA.sln
Lab1_CUDA/Lab1_CUDA/: Lab1_CUDA.vcxproj  kernel.cu  v1.txt  v2.txt
Lab1_CUDA/Lab1_CUDA/x64/Debug/: Lab1_CUDA.exe.recipe  Lab1_CUDA.ilk  kernel.cu-1114411885.deps  kernel.cu.cache
Lab1_CUDA/Lab1_CUDA/x64/Debug/Lab1_CUDA.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  Lab1_CUDA.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Lab1_CUDA/x64/Debug/: Lab1_CUDA.exp  Lab1_CUDA.lib
benchmarks/: CMakeLists.txt
tests/: CMakeLists.txt
